5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1662_2971.log
== TEST (2019-04-15 15:11:11) 
-- CODE:
taxa = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor >= Qf):
	msg = Qf + "Sim"
else: 
	msg = Qf + "Nao"

print(round(msg, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Qf = Qo * (1 + j) ** t 
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:11:39) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor >= Qf):
	msg = Qf + "Sim"
else: 
	msg = Qf + "Nao"

print(round(msg, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    msg = Qf + "Nao"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:12:03) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor >= Qf):
	msg = (Qf + "Sim")
else: 
	msg = (Qf + "Nao")

print(round(msg, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    msg = (Qf + "Nao")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:13:10) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor >= Qf):
	msg = (Qf) "Sim"
else: 
	msg = (Qf) "Nao"

print(round(msg, 2))
-- ERROR:
File "XXXX", line 9
    msg = (Qf) "Sim"
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:56) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	var = Qf, "Sim"
	print(round(var, 2))
else: 
	var = Qf, "Nao"
	print(round(var, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(var, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:05) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	var = Qf, "Sim"
	print(round(var, 2))
else: 
	var = Qf, "Nao"
	print(round(var, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(var, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:41) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	var = Qf, "Sim"
	print(round(var, 2))
else: 
	var1 = Qf, "Nao"
	print(round(var1, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(var, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:17) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf, "Sim"
else: 
	msg = Qf, "Nao"
	
print(round(var1, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(var1, 2))
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:35) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf, "Sim"
else: 
	msg = Qf, "Nao"
	
print(round(msg, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(msg, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:21:48) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf, "Sim"
else: 
	msg = Qf, "Nao"
	
print(round(Qf, 2), msg)
-- OUTPUT:
14365502.76 (14365502.75713173, 'Sim')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:22:47) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf, "Sim"
else: 
	msg = Qf, "Nao"
	
print(msg)
-- OUTPUT:
(14365502.75713173, 'Sim')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:23:20) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = (Qf, "Sim")
else: 
	msg = (Qf, "Nao")
	
print(msg)
-- OUTPUT:
(14365502.75713173, 'Sim')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:35) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = "Sim"
	print(round(Qf, 2))
else: 
	msg = "Nao"
	print(round(Qf, 2))
	
-- OUTPUT:
14365502.76
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:37) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf, "Sim"
	print(round(Qf, 2))
else: 
	msg = Qf, "Nao"
	print(round(Qf, 2))
	
-- OUTPUT:
14365502.76
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:57) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf, "Sim"
	print(round(msg, 2))
else: 
	msg = Qf, "Nao"
	print(round(msg, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(msg, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:21) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf, "Sim"
	print(round(msg, 2))
else: 
	msg = Qf, "Nao"
	print(round(Qf, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(msg, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:36) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf, "Sim"
	print(round(msg, 2))
else: 
	msg = Qf, "Nao"
	print(round(Qf, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(msg, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:54) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf, "Sim"
	print(round(msg, 2))
else: 
	msg = Qf, "Nao"
	print(round(msg, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(msg, 2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:59) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):

	print(round(Qf, 2), "Sim")
else: 

	print(round(msg, 2), "Nao")
	
-- OUTPUT:
14365502.76 Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:34:05) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):

	print(round(Qf, 2), "Sim")
else: 

	print(round(msg, 2), "Nao")
	
-- EXECUTION TIME:
0.185913
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76 Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:

-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81 Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:34:28) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):

	print(round(Qf, 2), // "Sim")
else: 

	print(round(msg, 2), // "Nao")
	
-- ERROR:
File "XXXX", line 10
    print(round(Qf, 2), // "Sim")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:02) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = "sim"
	print(round(Qf, 2),)
else: 
	msg = "Nao"
	print(round(msg, 2),)
	
-- OUTPUT:
14365502.76
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:19) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = "sim"
	print(round(Qf, 2), "msg")
else: 
	msg = "Nao"
	print(round(msg, 2), "msg")
	
-- OUTPUT:
14365502.76 msg
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:03) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = round(Qf, 2), "Sim"
else: 
	msg = round(Qf,2), "Nao"
print(msg)
	
-- OUTPUT:
(14365502.76, 'Sim')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:37:11) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = round(Qf, 2), "Sim"
else: 
	msg = round(Qf,2), "Nao"
print(msg)
	
-- EXECUTION TIME:
0.142374
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
(14365502.76, 'Sim')
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
(229727.78, 'Nao')
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
(1063202.81, 'Sim')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:20) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = round(Qf, 2), "Sim"
else: 
	msg = round(Qf,2), "Nao"
print(msg)
	
-- OUTPUT:
(14365502.76, 'Sim')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:21) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg1 = round(Qf, 2)
	print(mgs1)
else: 
	msg2 = round(Qf,2), "Nao"
	print(msg2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mgs1)
NameError: name 'mgs1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:59) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	var1 = Qf 
	var2 = "Sim"
	print(round(var1, 2))
	print(var2)
else: 
	var1 = Qf
	var3 = "Nao"
	print(round(var1, 2)
	print(var3)
	
-- ERROR:
File "XXXX", line 17
    print(var3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:27) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	var1 = Qf 
	var2 = "Sim"
	print(round(var1, 2))
	print(var2)
else: 
	var1 = Qf
	msg = "Nao"
	print(round(var1, 2)
	print(msg)
-- ERROR:
File "XXXX", line 17
    print(msg)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:02) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	var1 = Qf 

	print(round(var1, 2))
	print("Sim")
else: 
	var1 = Qf

	print(round(var1, 2)
	print("Nao")
-- ERROR:
File "XXXX", line 17
    print("Nao")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:32) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	var1 = Qf 
	print(round(var1, 2))
	print("Sim")
else: 
	var1 = Qf
	print(round(var1, 2)
	print("Nao")
-- ERROR:
File "XXXX", line 15
    print("Nao")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:43:22) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf
	print(round(Qf, 2))
	print("Sim")
else: 
	msg = Qf
	print(round(Qf, 2))
	print("Nao")
-- OUTPUT:
14365502.76
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:43:29) 
-- CODE:
j = float(input("digite taxa: "))
valor = float(input("digite valor: "))
Qo= 1500
t = 36

Qf = Qo * (1 + j) ** t 

if (valor <= Qf):
	msg = Qf
	print(round(Qf, 2))
	print("Sim")
else: 
	msg = Qf
	print(round(Qf, 2))
	print("Nao")
-- EXECUTION TIME:
0.142413
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81
Sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
